--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,50 @@
-name: GitHub Actions Build and Deploy Demo
+name: get pull request info for Dingding
+
 on:
   push:
     branches:
       - master
+
 jobs:
-  build-and-deploy:
+  spring-boot:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
-      with:
-        persist-credentials: false
-    - name: Install and Build
+    - name: checkout
+      uses: actions/checkout@v2
+      
+    # 此处省略具体的业务代码    
+   
+    # 获取PR信息并将其添加到环境变量
+    - name: set PR_INFO 
       run: |
-        npm install
-        npm run build
-    - name: Deploy
-      uses: wanghuajin-bello/vue-study@master
+        echo PR_NUMBER=$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }') >> $GITHUB_ENV
+        echo PR_TITLE=$(jq --raw-output .pull_request.title "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
+        echo PR_URL=$(jq --raw-output .pull_request.html_url "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
+        echo PR_USER=$(jq --raw-output .pull_request.user.login "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
+    
+    # 打印环境变量
+    - name: print env
+      run: print env
+     
+    # 发送钉钉消息
+    - name: build success
+      if: ${{ success() }}
+      uses: fifsky/dingtalk-action@master
       with:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: build
+        url: https://oapi.dingtalk.com/robot/send?access_token=这里写钉钉机器人的token
+        type: markdown
+        content: |
+          # 💯👨‍💻 Success 🎉🎉🎉
+          > Maven Build of [# ${{ env.PR_TITLE }}](${{ env.PR_URL }}) by ${{ env.PR_USER }} success
+          > ^_^ from github action message 
+    - name: maven build failure
+      if: ${{ failure() }}
+      uses: fifsky/dingtalk-action@master
+      with:
+        url: https://oapi.dingtalk.com/robot/send?access_token=${{ env.DING_TOKEN}}如果是公有项目则应该在github项目中依次点击settings -> secret 添加一个DING_TOKEN，并设置为自己的钉钉机器人token
+        type: markdown
+        content: |
+          # 💤🤷‍♀️ failure 🙅‍♂️💣
+          > Maven Build of [# ${{ env.PR_TITLE }}](${{ env.PR_URL }}) by ${{ env.PR_USER }} failure
+          > (⋟﹏⋞)   from github action message
