--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Merge origin pre-master
         run: |
           # 使用自己的用户名替换 username
-          git config --global user.name 'username'
-          git config --global user.email 'username@users.noreply.github.com'
+          git config --global user.name 'wanghuajin'
+          git config --global user.email 'wanghuajin@belloai.com'
 
           git pull --unshallow
 
