--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,6 +13,8 @@ jobs:
   merge:
     runs-on: ubuntu-latest
     steps:
+      - name: print env
+      run: printenv
       - uses: actions/checkout@v2
       - name: Merge origin pre-master
         run: |
