--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,14 +13,15 @@ jobs:
   merge:
     runs-on: ubuntu-latest
     steps:
-      - name: print env
-        run: print env
       - uses: actions/checkout@v2
+      with:
+        user_name: ${{ secrets.USER_NAME }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Merge origin pre-master
         run: |
           # 使用自己的用户名替换 username
-          git config --global user.name 'wanghuajin'
-          git config --global user.email 'wanghuajin@belloai.com'
+          # git config --global user.name 'wanghuajin'
+          # git config --global user.email 'wanghuajin@belloai.com'
 
           git pull --unshallow
 
