--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Merge origin pre-master
         run: |
           # 使用自己的用户名替换 username
-          # git config --global user.name 'wanghuajin'
-          # git config --global user.email 'wanghuajin@belloai.com'
+          git config --global user.name 'wanghuajin'
+          git config --global user.email 'wanghuajin@belloai.com'
 
           git pull --unshallow
 
