--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -23,6 +23,6 @@ jobs:
           -X POST \
           -H "Accept: application/vnd.github.v3+json" \
           -H "content-type: application/json" \
-          -H "authorization: Bearer ${{ secrets.ACCESS_TOKEN1 }}" \
+          -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           https://api.github.com/repos/threfo/btp_frontend/merges \
           -d '{"base":"pre-master","head":"master"}'
