--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -23,6 +23,6 @@ jobs:
           -X POST \
           -H "Accept: application/vnd.github.v3+json" \
           -H "content-type: application/json" \
-          -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "authorization: Bearer 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" \
           https://api.github.com/repos/wanghuajin-bello/vue-study/merges \
           -d '{"base":"pre-master","head":"master"}'
