--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   merge:
     runs-on: ubuntu-latest
+    permissions: read-all|write-all
     steps:
       - uses: actions/checkout@v2
         with:
@@ -23,6 +24,6 @@ jobs:
           -X POST \
           -H "Accept: application/vnd.github.v3+json" \
           -H "content-type: application/json" \
-          -H "authorization: token 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" \
+          -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           https://api.github.com/repos/wanghuajin-bello/vue-study/merges \
           -d '{"base":"pre-master","head":"master"}'
