--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -8,11 +8,11 @@ on:
   # 定时任务触发，使用 cron 规则，这里默认一小时执行一次
 #   schedule:
 #     - cron: '0 * * * *'
-
+permissions: write-all
 jobs:
   merge:
     runs-on: ubuntu-latest
-    permissions: read-all|write-all
+    
     steps:
       - uses: actions/checkout@v2
         with:
