--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,10 +15,7 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
-        with:
-          user_name: ${{ secrets.USER_NAME }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Merge origin pre-master
+      - name: Merge origin develop
         run: |
           curl \
           -X POST \
@@ -26,4 +23,4 @@ jobs:
           -H "content-type: application/json" \
           -H "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           https://api.github.com/repos/wanghuajin-bello/vue-study/merges \
-          -d '{"base":"pre-master","head":"master"}'
+          -d '{"base":"develop","head":"master"}'
